--- a/canvas.html
+++ b/canvas.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<!-- Cyril Vedder          Project 5 CIS 115        2/13/14 -->
+<!-- Cyril Vedder          Project 5 CIS 115        -->
 <head>
     <title>Canvas</title>
     <meta charset="utf-8">
